--- a/src/Compenents/landingpage/Result.css
+++ b/src/Compenents/landingpage/Result.css
@@ -1,6 +1,6 @@
 .achievers-container {
     text-align: center;
-    background: #1e3a5f;
+    background: #0c5978;
     color: white;
     padding: 20px;
     font-family: "Arial", sans-serif;
@@ -27,7 +27,7 @@
   }
   
   .achiever-card {
-    background: #ffc107;
+    background: #eeca39;
     border-radius: 10px;
     padding: 15px;
     text-align: center;
