--- a/src/Compenents/landingpage/Result.css
+++ b/src/Compenents/landingpage/Result.css
@@ -2,14 +2,23 @@
     text-align: center;
     background: #0c5978;
     color: white;
-    padding: 20px;
-    font-family: "Arial", sans-serif;
+    padding: 2rem;
+    margin: auto;
+
+  }
+
+  .maintitle {
+    margin: auto;
+    font-size: 3rem;
+    font-weight: bold;
+    text-decoration: underline;
+    color: #eeca39;
   }
   
   .title {
-    font-size: 2.5rem;
-    font-weight: bold;
-    margin-bottom: 10px;
+    font-size: 2rem;
+    /* font-weight: bold; */
+    margin-bottom: 2rem;
     color: white;
   }
   
@@ -21,18 +30,22 @@
   }
   
   .achievers-list {
+    margin: 4rem auto; /* Centers the container horizontally */
+    max-width: 1200px; /* Adjust width as needed */
     display: flex;
     justify-content: center;
     gap: 20px;
     flex-wrap: wrap;
-  }
+    padding: 0 2rem; /* Adds equal padding on left and right */
+}
+
   
   .achiever-card {
     background: #eeca39;
     border-radius: 10px;
-    padding: 15px;
+    padding: 0px;
     text-align: center;
-    width: 300px;
+    width: 240px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   }
   
@@ -41,16 +54,20 @@
     height: 120px;
     border-radius: 50%;
     border: 4px solid white;
-    margin-bottom: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
   }
   
   .iit-name {
+    margin: 0%;
+    padding: 0%;
     font-size: 1.4rem;
     font-weight: bold;
     color: #1e3a5f;
   }
   
   .jee-rank {
+    margin: 5px;
     font-size: 1rem;
     font-weight: bold;
     color: #1e3a5f;
@@ -59,17 +76,18 @@
   .achiever-info {
     background: #003366;
     color: white;
-    padding: 10px;
+    padding: 3px;
     border-radius: 5px;
-    margin-top: 10px;
   }
   
   .achiever-name {
+    margin: auto;
     font-size: 1.2rem;
     font-weight: bold;
   }
   
   .parent, .address {
+    
     font-size: 0.9rem;
   }
   
