--- a/styles/CoursesSectionL.css
+++ b/styles/CoursesSectionL.css
@@ -1,77 +1,55 @@
 .courses-sectionL {
-  font-family: "DM Serif Text", serif;
-  font-weight: 400;
-  font-style: normal;
+  background-color: #35667e;
   text-align: center;
-  padding: 2rem;
-  margin: 2rem 0rem;
-  background-color: #c1d8e0;
+  padding: 20px;
 }
 
 .courses-titleL {
   font-size: 2rem;
-  font-weight: bold;
-  color: #184f89;
-  margin-bottom: 0.5rem;
+  color: #eeab0e;
 }
 
 .courses-subtitleL {
-  font-size: 1.2rem;
-  color: #000000;
-  margin-bottom: 2rem;
+  font-size: 1.5rem;
+  color: #0993d8;
+  margin-bottom: 20px;
 }
 
-.courses-container {
+.slider-container {
   display: flex;
+  align-items: center;
   justify-content: center;
-  gap: 1.5rem;
-  flex-wrap: wrap;
-  padding: 2rem 2rem;
+  position: relative;
 }
 
-.course-card {
-  background-color: #ffd700;
-  color: #000;
-  border-radius: 15px;
-  text-align: center;
-  padding: 1.5rem;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  max-width: 300px;
-  width: 100%;
+.video-frame {
+  width: 80%;
+  height: 400px;
+  border-radius: 10px;
+  overflow: hidden;
 }
 
-.course-icon {
-  font-size: 2.5rem;
-  color: #184f89;
-  margin-bottom: 1rem;
-}
-
-.course-title {
-  font-size: 1.2rem;
-  font-weight: bold;
-  margin-bottom: 0.5rem;
-}
-
-.course-description {
-  font-size: 1rem;
-  color: #333333;
-  margin-bottom: 1rem;
-}
-
-.course-button {
-  font-family: "DM Serif Text", serif;
-  /* font-weight: 400; */
-  font-style: normal;
-  background-color: #184f89;
-  color: #fff;
+.slider-button {
+  background-color: rgba(0, 0, 0, 0.6);
+  color: white;
   border: none;
-  padding: 0.8rem 1.2rem;
-  border-radius: 5px;
+  padding: 10px 15px;
   cursor: pointer;
-  font-size: 0.9rem;
-  font-weight: bold;
+  font-size: 1.5rem;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  border-radius: 5px;
 }
 
-.course-button:hover {
-  background-color: #002d66;
+.slider-button.left {
+  left: 10px;
+}
+
+.slider-button.right {
+  right: 10px;
+}
+
+.slider-button:hover {
+  background-color: rgba(0, 0, 0, 0.8);
 }
