--- a/styles/TriumphSection.css
+++ b/styles/TriumphSection.css
@@ -1,52 +1,63 @@
-.triumph-section {
-  font-family: "DM Serif Text", serif;
-  font-weight: 400;
-  font-style: normal;
-    text-align: center;
-    padding: 2rem;
-    background-color: #ffffff;
-  }
-  
-  .title {
-    font-size: 2.5rem;
-    font-weight: bold;
-    color: #184f89;
-    margin-bottom: 1rem;
-  }
-  
-  .subtitle {
-    font-size: 1.5rem;
-    font-weight: bold;
-    color: #000000;
-    margin-bottom: 2rem;
-  }
-  
-  .image-container {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%; 
-  }
-  
-  .group-image {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    max-height: 524px;
-    max-width: 1000px;
-    width: 100%; 
-  }
-  
-  .participants span{
+
+  .triumph-section {
     font-family: "DM Serif Text", serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 1rem;
-    color: #333333;
-    line-height: 1.5;
-    /* padding: 1rem 0.5rem; */
+    text-align: center;
+    padding: 20px;
+    background-color: #edeff3e0;
   }
   
-  .participants p{
-    margin: 2rem;
+  .title-t {
+    font-size: 2rem;
+    color: #e51d1d;
+    margin-bottom: 20px;
   }
+  
+  .image-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+  }
+  
+  .image-frame {
+    width:100%;
+    height: auto;
+    overflow: hidden;
+    border-radius: 10px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  }
+  
+  .triumph-image {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    border-radius: 10px;
+  }
+  
+  .slider-button {
+    background-color: rgba(0, 0, 0, 0.6);
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    cursor: pointer;
+    font-size: 1.5rem;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    border-radius: 5px;
+  }
+  
+  .slider-button.left {
+    left: 10px;
+  }
+  
+  .slider-button.right {
+    right: 10px;
+  }
+  
+  .slider-button:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+  }
+  
