--- a/styles/TriumphSection.css
+++ b/styles/TriumphSection.css
@@ -5,15 +5,23 @@
     font-style: normal;
     text-align: center;
     padding: 20px;
-    background-color: #edeff3e0;
+    background-color: #d7d8dce0;
   }
-  
   .title-t {
     font-size: 2rem;
     color: #e51d1d;
     margin-bottom: 20px;
   }
-  
+ .triumph-description {
+    font-family: "DM Serif Text", serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 1.2rem;
+    color: #7753e1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
   .image-container {
     display: flex;
     align-items: center;
