--- a/styles/FeeBenefits.css
+++ b/styles/FeeBenefits.css
@@ -47,8 +47,8 @@
 }
 
 .benefit-title {
-    font-size: 1.2rem;
-    text-decoration: underline;
+    font-size: 1.5rem;
+    /* text-decoration: underline; */
     color: #0c549f;
     margin-bottom: 10px;
 }
