--- a/styles/StatsSection.css
+++ b/styles/StatsSection.css
@@ -30,7 +30,7 @@
   background-color: #ffd700;
   color: #000;
   text-align: center;
-  padding: 0.6rem;
+  /* padding: 0.1rem; */
   margin-top: 1rem;
   margin-bottom: 1rem;
   margin-left: 0.3rem;
