--- a/styles/CoursesSectionL.css
+++ b/styles/CoursesSectionL.css
@@ -7,7 +7,8 @@
 
 /* Title Styling */
 .courses-titleL {
-  font-size: 2rem;
+  font-size: 2.5rem;
+  padding: 1rem;
   color: #eeab0e;
   margin-bottom: 10px;
 }
