--- a/styles/Faculty.css
+++ b/styles/Faculty.css
@@ -5,6 +5,7 @@
   margin: auto;
   padding: 20px;
   text-align: center;
+  background-color: #16395b;
 }
 
 .faculty-title {
@@ -12,6 +13,8 @@
   font-weight: bold;
   margin-bottom: 20px;
   color: #2c3e50;
+  background-color: #fffb1f;
+  border-radius: 5px;
 }
 
 .faculty-grid {
@@ -23,10 +26,19 @@
 .faculty-subject {
   font-size: 2rem;
   font-weight: bold;
-  color: #34495e;
   margin-bottom: 20px;
+  width: 20%;
+  margin: auto auto 20px auto;
+  padding: 10px;
+  background-image: linear-gradient(315deg, #caeff6 0%, #8daec6 74%);
+  border-radius: 50%;
 }
-
+.faculty-subject:hover {
+  transform: scale(1.01);
+  box-shadow: 0 6px 15px rgba(0, 0, 0, 0.15);
+  border-color: #f25106;
+  box-shadow: 0 0 15px #f98e03;
+}
 .faculty-list {
   display: flex;
   justify-content: center;
@@ -50,8 +62,8 @@
 .faculty-card:hover {
   transform: scale(1.05);
   box-shadow: 0 6px 15px rgba(0, 0, 0, 0.15);
-  border-color: #3498db;
-  box-shadow: 0 0 15px #3498db;
+  border-color: #f25106;
+  box-shadow: 0 0 15px #f98e03;
 }
 
 .facultyimage {
@@ -59,24 +71,27 @@
   height: 80px;
   border-radius: 50%;
   margin: 10px auto;
+  object-fit: cover;
 }
 
 .faculty-name {
   font-size: 1.5rem;
   font-weight: bold;
-  color: #2c3e50;
+  color: #1b3651;
   margin: 10px 0;
 }
 
 .faculty-degree {
-  font-size: 1rem;
-  color: #7f8c8d;
+  font-size: 1.2rem;
+  color: #30052b;
+  font-weight: bold;
 }
 
 .faculty-contact {
   margin-top: 30px;
   font-size: 1.2rem;
-  color: #2c3e50;
+  color: #ba4c0c;
   font-weight: bold;
+  font-family: 'Courier New', Courier, monospace;
 }
 
