--- a/styles/Faculty.css
+++ b/styles/Faculty.css
@@ -55,10 +55,12 @@
 }
 
 .facultyimage {
-  width: 100px;
-  height: 100px;
+  width: 120px;
+  height: 120px;
   border-radius: 50%;
+  background-color: white;
   margin: 10px auto;
+  border: 3px solid #ffffff; /* White border */
 }
 
 .faculty-name {
@@ -69,8 +71,9 @@
 }
 
 .faculty-degree {
-  font-size: 1rem;
-  color: #7f8c8d;
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #f2f9f9;
 }
 
 .faculty-contact {
